unpackaged/main/default/objects/Consumer_Risk_Summary__c/Consumer_Risk_Summary__c.object-meta.xml
<CustomObject>
    <description>This object is being repurposed in support of the PreQual project Q1 2025 but should be used going forward for Risk model results.</description>
    <label>Consumer Risk Summary</label>
    <nameField>
        <displayFormat>CRS-{00000}</displayFormat>
        <label>CRS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer Risk Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>