unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Bankcard_Score__c.field-meta.xml
<CustomField>
    <fullName>Bankcard_Score__c</fullName>
    <label>IDScore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>