unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Comply360_Grade__c.field-meta.xml
<CustomField>
    <fullName>Comply360_Grade__c</fullName>
    <label>Comply360 Grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>