unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Consumer_Credit_Summary__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Credit_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Credit Summary</label>
    <referenceTo>Consumer_Credit_Summary__c</referenceTo>
    <relationshipLabel>Consumer Risk Summaries</relationshipLabel>
    <relationshipName>Consumer_Risk_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>