unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRD-69</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consumer Risk Summaries (Contact)</relationshipLabel>
    <relationshipName>Consumer_Risk_Summaries1</relationshipName>
    <type>Lookup</type>
</CustomField>