unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Decisioning_Risk_Rule_Result__c.field-meta.xml
<CustomField>
    <fullName>Decisioning_Risk_Rule_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Risk Rule Result that the OBS Decline Reason is derived from.</description>
    <label>Decisioning Risk Rule Result</label>
    <referenceTo>Risk_Rule_Result__c</referenceTo>
    <relationshipLabel>Consumer Risk Summaries</relationshipLabel>
    <relationshipName>Consumer_Risk_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>