unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Decline_Email_Error__c.field-meta.xml
<CustomField>
    <fullName>Decline_Email_Error__c</fullName>
    <description>The error is encountered when sending a Reg B notice or a Notice of Incomplete Application, if applicable.</description>
    <label>Decline Email Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>