unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Decline_Email_Exempt_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Email_Exempt_Reason__c</fullName>
    <label>Decline Email Exempt Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Decline_Email_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associated Opportunity Submitted</fullName>
            </value>
            <value>
                <fullName>Bank Statements Provided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>