unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Decline_Email_Mailing_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Decline_Email_Mailing_Address_Formula__c</fullName>
    <description>Used for merge field in Reg B or Notice of Incomplete Application email.</description>
    <formula>IF(
    Primary_Object__c = 'Lead',
        Lead__r.Street &amp; BR() &amp;
        Lead__r.City &amp; ", " &amp; Lead__r.State &amp; " " &amp; Lead__r.PostalCode,
    Contact__r.Account.BillingStreet &amp; BR() &amp;
    Contact__r.Account.BillingCity &amp; ", " &amp; Contact__r.Account.BillingState &amp; " " &amp; Contact__r.Account.BillingPostalCode
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decline Email Mailing Address Formula</label>
    <type>Text</type>
</CustomField>