unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Decline_Email_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Email_Reason__c</fullName>
    <description>The decline reason that will be provided on the Reg B or Notice of Incomplete Application for applicable Consumer Risk Summary records.</description>
    <inlineHelpText>Reg B or Notice of Incomplete Application email verbiage.</inlineHelpText>
    <label>Decline Email Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>