unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Decline_Email_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Decline_Email_Scheduled_Date__c</fullName>
    <description>The scheduled date for a Reg B or Notice of Incomplete Application email. Unexpired Consumer Risk Summaries that are OBS eligible will also have this scheduled as a check for bank statements. If bank statements were provided before expiration, this field will be cleared.</description>
    <inlineHelpText>Scheduled date for a Reg B or Notice of Incomplete Application email.</inlineHelpText>
    <label>Decline Email Scheduled Date</label>
    <type>Date</type>
</CustomField>