unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Eligible__c.field-meta.xml
<CustomField>
    <fullName>Eligible__c</fullName>
    <label>Eligible</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NF_QB</fullName>
                <label>NF/QB</label>
            </value>
            <value>
                <fullName>Waterfall</fullName>
            </value>
            <value>
                <fullName>SBL</fullName>
            </value>
            <value>
                <fullName>NFXPRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>