unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Returned Error Message From Server</description>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>