unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Expiration date for PreQual score.</description>
    <inlineHelpText>Expiration date for PreQual score.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>