unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/External_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Request_ID__c</fullName>
    <description>References the decision_engine_application_id column in the PostgreSQL decision_application table, which stores requests and responses from the decision engine service.</description>
    <externalId>true</externalId>
    <label>External Request ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>