unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consumer Risk Summaries</relationshipLabel>
    <relationshipName>Consumer_Risk_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>