unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/IDScore_Reason_Code_2__c.field-meta.xml
<CustomField>
    <fullName>IDScore_Reason_Code_2__c</fullName>
    <label>IDScore Reason Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>