unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/IDScore_Version__c.field-meta.xml
<CustomField>
    <fullName>IDScore_Version__c</fullName>
    <label>IDScore Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>