unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>The IP address of the lead/contact that was recorded at the time of agreeing to the FCRA consent.</description>
    <label>IP Address</label>
    <length>39</length>
    <type>Text</type>
</CustomField>