unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Model_Status__c.field-meta.xml
<CustomField>
    <fullName>Model_Status__c</fullName>
    <description>Status of the model being run (Type field) for this Consumer Risk Summary record.</description>
    <label>Model Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>