unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/OBS_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>OBS_Decline_Reason__c</fullName>
    <description>The prioritized decline reason from the list returned in the Oscilar output. Should use bureau decline reason first, then use NF/QB decline reason if bureau was not declined. NFXPRS, Waterfall, and SBL decline reasons will not appear here.</description>
    <label>OBS Decline Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>