unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Prequal_Display__c.field-meta.xml
<CustomField>
    <fullName>Prequal_Display__c</fullName>
    <description>Captures the routing strategy used for the customer, indicating whether the FS Interstitial page was presented or if an alternate routing path was followed.</description>
    <label>Prequal Display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>congrats_banks</fullName>
                <label>Congrats Banks</label>
            </value>
            <value>
                <fullName>fs_interstitial</fullName>
                <label>FS Interstitial</label>
            </value>
            <value>
                <fullName>bau_banks</fullName>
                <label>BAU Banks</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>