unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object__c</fullName>
    <formula>IF(
				
				OR(
								(Lead__r.IsConverted = FALSE &amp;&amp; Lead__c &lt;&gt; ""),
								(Lead__c &lt;&gt; "" &amp;&amp; Contact__c = "")
								),
				"Lead",
				IF(
								 Contact__c &lt;&gt; "",
								"Contact",
								""
								)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Object</label>
    <type>Text</type>
</CustomField>