unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/QB_Brand_Address__c.field-meta.xml
<CustomField>
    <fullName>QB_Brand_Address__c</fullName>
    <description>Used for sender merge field in Reg B or Notice of Incomplete Application email for QB emails.</description>
    <formula>LEFT($Setup.Welcome_Email_Variables_QB__c.QB_Address__c, FIND(",", $Setup.Welcome_Email_Variables_QB__c.QB_Address__c) - 1) &amp; 
", " &amp; 
MID($Setup.Welcome_Email_Variables_QB__c.QB_Address__c, FIND(",", $Setup.Welcome_Email_Variables_QB__c.QB_Address__c) + 2, FIND(",", $Setup.Welcome_Email_Variables_QB__c.QB_Address__c, FIND(",", $Setup.Welcome_Email_Variables_QB__c.QB_Address__c) + 1) - FIND(",", $Setup.Welcome_Email_Variables_QB__c.QB_Address__c) - 2) &amp; 
BR() &amp; 
MID($Setup.Welcome_Email_Variables_QB__c.QB_Address__c, FIND(",", $Setup.Welcome_Email_Variables_QB__c.QB_Address__c, FIND(",", $Setup.Welcome_Email_Variables_QB__c.QB_Address__c) + 1) + 2, LEN($Setup.Welcome_Email_Variables_QB__c.QB_Address__c) - FIND(",", $Setup.Welcome_Email_Variables_QB__c.QB_Address__c, FIND(",", $Setup.Welcome_Email_Variables_QB__c.QB_Address__c) + 1) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QB Brand Address</label>
    <type>Text</type>
</CustomField>