unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Recipient_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Business_Name__c</fullName>
    <description>Used for recipient merge field in Reg B or Notice of Incomplete Application email.</description>
    <formula>CASE(Primary_Object__c,
					'Lead', Lead__r.Company,
					'Contact', Contact__r.Account.Name,
					''
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Business Name</label>
    <type>Text</type>
</CustomField>