unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Started_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Started_Date_Time__c</fullName>
    <description>Date and time the Model_Status__c field was updated to Processing.</description>
    <inlineHelpText>Date and time the Model Status field was updated to Processing.</inlineHelpText>
    <label>Started Date/Time</label>
    <type>DateTime</type>
</CustomField>