unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Success_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Success_Date_Time__c</fullName>
    <description>Date and time the Model_Status__c field was updated to Success.</description>
    <inlineHelpText>Date and time the Model Status field was updated to Success.</inlineHelpText>
    <label>Success Date/Time</label>
    <type>DateTime</type>
</CustomField>