unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Synthetic_Score_Reason_2__c.field-meta.xml
<CustomField>
    <fullName>Synthetic_Score_Reason_2__c</fullName>
    <label>Synthetic Score Reason 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>