unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Synthetic_Score_Version__c.field-meta.xml
<CustomField>
    <fullName>Synthetic_Score_Version__c</fullName>
    <label>Synthetic Score Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>