unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <description>Used to insert today's date into an email template (i.e. Reg B &amp; Notice of Incomplete Application).</description>
    <formula>CASE(MONTH(TODAY()),
					1, "January",
					2, "February",
					3, "March",
					4, "April",
					5, "May",
					6, "June",
					7, "July",
					8, "August",
					9, "September",
					10, "October",
					11, "November",
					12, "December",
					'')
&amp; " " &amp; TEXT(DAY(TODAY())) &amp; ", " &amp; TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today</label>
    <type>Text</type>
</CustomField>