unpackaged/main/default/objects/Consumer_Risk_Summary__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Values should align with the available Risk models being run and evaluated as apart of the sales process.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PreQual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>